# The-Journey-of-Wizard

./: .gitattributes  .gitignore  TODO.md  readme.md
code/: CMakeLists.txt
code/assets/: assets.qrc
code/src/: MyGame.cpp  MyGame.h  main.cpp
code/src/Items/: CItemFactory.cpp  CItemFactory.h  IMetal.cpp  IMetal.h  IWood.cpp  IWood.h  Item.cpp  Item.h  Mountable.cpp  Mountable.h  Weapon.cpp  Weapon.h
code/src/Items/Armors/: Armor.cpp  Armor.h  BlackWizardRobe.cpp  BlackWizardRobe.h  ElectrobreakerArmor.cpp  ElectrobreakerArmor.h  FlamebreakerArmor.cpp  FlamebreakerArmor.h  IcebreakerArmor.cpp  IcebreakerArmor.h  OldShirt.cpp  OldShirt.h
code/src/Items/Characters/: CAIPlayer.cpp  CAIPlayer.h  Character.cpp  Character.h  IHero.cpp  IHero.h  Link.cpp  Link.h
code/src/Items/HeadEquipments/: BlackHat.cpp  BlackHat.h  CapOfTheHero.cpp  CapOfTheHero.h  ElectrobreakerHat.cpp  ElectrobreakerHat.h  FlamebreakerHat.cpp  FlamebreakerHat.h  HeadEquipment.cpp  HeadEquipment.h  IcebreakerHat.cpp  IcebreakerHat.h
code/src/Items/LegEquipments/: BlackShoes.cpp  BlackShoes.h  ElectrobreakerShoes.cpp  ElectrobreakerShoes.h  FlamebreakerShoes.cpp  FlamebreakerShoes.h  IcebreakerShoes.cpp  IcebreakerShoes.h  LegEquipment.cpp  LegEquipment.h  WellWornTrousers.cpp  WellWornTrousers.h
code/src/Items/Maps/: Battlefield.cpp  Battlefield.h  Map.cpp  Map.h  MetalPlatform.cpp  MetalPlatform.h  Platform.cpp  Platform.h  RockPlatform.cpp  RockPlatform.h  WoodPlatform.cpp  WoodPlatform.h
code/src/Items/MeleeWeapons/: MeleeWeapon.cpp  MeleeWeapon.h  OneHandedSword.cpp  OneHandedSword.h  Spear.cpp  Spear.h  TwoHandedSword.cpp  TwoHandedSword.h
code/src/Items/RangedWeapons/: AOEBow.cpp  AOEBow.h  Arrow.cpp  Arrow.h  Bow.cpp  Bow.h  ComboBow.cpp  ComboBow.h  PrimaryBow.cpp  PrimaryBow.h  RangedWeapon.cpp  RangedWeapon.h
code/src/Scenes/: BattleScene.cpp  BattleScene.h  GameOverScene.cpp  GameOverScene.h  PvEBattleScene.cpp  PvEBattleScene.h  Scene.cpp  Scene.h  StartScene.cpp  StartScene.h
doc/: 2024大作业自评表.xlsx  AI_state.pu  TODO.md  char_class.pu  game_2d.pu  game_demo.pu  game_hero.pu  hero_class.pu  hero_state.pu  item_class.pu  item_state.pu  one_handed_sword.pu  scene_class.pu
